--- a/miniprogram/package.json
+++ b/miniprogram/package.json
@@ -15,6 +15,8 @@
     "eslint-plugin-standard": "^4.0.1"
   },
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
