--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -24,7 +24,8 @@
         "pages/single/spark/tutorial/tutorial",
         "pages/basic/productDesign/designDetail/designDetail",
         "pages/basic/productDesign/design",
-        "pages/socket/index"
+        "pages/socket/index",
+        "pages/socket/analysis/index"
     ],
     "subpackages": [
         {
