refactor: optimize by Audits

--- a/miniprogram/pages/project/project.json
+++ b/miniprogram/pages/project/project.json
@@ -1,5 +1,6 @@
 {
   "navigationBarTitleText": "示例项目",
   "usingComponents":{
+    "programs-portal": "/components/programs-portal/programs-portal"
   }
 }
